@@ -12,13 +12,13 @@ AUX user-test-fixes.patch 5147 RMD160 6258879413ae81a18d0c6bcaa3b0661d86a0d14a S
 DIST jruby-src-1.6.4.tar.gz 13939963 RMD160 db720537b22e1f7e4b31db8c325ecb051150c398 SHA1 733f55a64e2eb8131ddd31a724918b785eb04d36 SHA256 7a19afe6610aba02cb33419e089d6121a4a4dbc182db7b7043e8f2413be0250b
 DIST jruby-src-1.6.5.1.tar.gz 14284770 RMD160 a96de6c66055cbcebf48109c972d46f7d22a67c2 SHA1 8e1f6fbf609ed98ad848d3636aac1bcdcb63e3ff SHA256 1126f29b888b5427c2d416042a6c010849ab1d29ee9be97e592caf6859921be5
 EBUILD jruby-1.6.4.ebuild 5712 RMD160 0a1eb1e9061300c9f73df454517067c45a08b2f4 SHA1 9302cae45f75cab38048065e7cc1ef58a3db45e0 SHA256 03eb41818b82f4b508ddbdba40f0b0a4fa65d3e1fd677c6dd2e5586851f486b9
-EBUILD jruby-1.6.5.1.ebuild 5718 RMD160 fc71de7534bd0ecfb4c2067046581cab06d1903e SHA1 2c5385a8df428a3589e97a963fa9d639269783bc SHA256 21c6fec5f81867058650ae923abf50028675080f18e1ee52b2a6a25839c5a41d
-MISC ChangeLog 678 RMD160 589f1e7f3017c8c8077d25f93c1e471edd179277 SHA1 36fdea795ef1491fea8b7aadb3790f3c6ddadcb1 SHA256 93b2e9cf36b92da5ab65fae4870fed0448e6d13b3540512644651de9286c83c4
+EBUILD jruby-1.6.5.1.ebuild 5962 RMD160 2ea42b3994690499f32f0944be46bf9af0762f97 SHA1 6eaafbaf2d91b9e5cd8a0af245080764f54b89a0 SHA256 97df8b26b6f42d53b5aede4e1407f171b1ab1db72ee00bd767213771ea41800e
+MISC ChangeLog 892 RMD160 17091584e681992f2ccb8c6108d6e419a4ed928e SHA1 f3e42f3bcbc889a1d5d8a874132c8b82c7d788b8 SHA256 2a6007fbe07328c62a6ed9c2e5c3358111435e0875639e3898347094e1f58f90
 MISC metadata.xml 179 RMD160 3813d8d3651faaf99042cb3c776d0bc59ad7b5b4 SHA1 421371d5338c6b9b8b4950c44d78a9dbe79cf64d SHA256 0df27adc265ef6596f973641d25b64b7291c87f1b114d6895f69d222049bed1b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk8JcjAACgkQiIP6VqMIqNfg/QEAhaF5p9ruD4n4wN8NiK5K19ye
-+b6sCMJ+eIVQvs8rrkoA/isuYuRAGXWiVyIKrilvBo8FRmy3EVdbrdMnSbypLOlv
-=MB+5
+iF4EAREIAAYFAk8bzJkACgkQiIP6VqMIqNeP6QD/VCOjUBo7gPk5lSsp1yqIod83
+AiNqc4j0XGLtOI6pXukA/0LekHN8xDKFAHyRE+LnGF9NV1pvdkgYOTFLQG9xIIX6
+=owk8
 -----END PGP SIGNATURE-----
